# exocortex

./: .cortex.toml  .gitignore  AGENT.md  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
exocortex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
memory/: JOURNAL.md
src/: __init__.py  main.py
src/bus/: __init__.py
src/compute/: __init__.py  dream.py
src/config/: __init__.py
src/core/: __init__.py  resonance.py  types.py
src/memory/: __init__.py  surrealdb_backend.py
src/protocols/: __init__.py
src/shadows/: __init__.py
src/tui/: __init__.py
tests/: test_core.py  test_phase2.py
