[project]
name = "exocortex"
version = "0.1.0"
description = "Persistent cognitive substrate for multi-agent systems"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "numpy>=1.24",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]
ml = ["scikit-learn>=1.6"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
